feat: 更新 api doc. fix: 修正 上傳選擇題 會造成其他附加檔案一起壞掉 issue.
