# fancyapi/src/main/java/com/cmoney/fanciapi/fanci/model/BulletinboardMessage.kt
@@ -20,9 +20,9 @@ import com.cmoney.fanciapi.fanci.model.GroupMember
 import com.cmoney.fanciapi.fanci.model.IEmojiCount
 import com.cmoney.fanciapi.fanci.model.IReplyMessage
 import com.cmoney.fanciapi.fanci.model.IUserMessageReaction
-import com.cmoney.fanciapi.fanci.model.IVoting
 import com.cmoney.fanciapi.fanci.model.MediaIChatContent
 import com.cmoney.fanciapi.fanci.model.MessageServiceType
+import com.cmoney.fanciapi.fanci.model.Voting
 
 import com.squareup.moshi.Json
 import android.os.Parcelable
@@ -56,7 +56,7 @@ data class BulletinboardMessage (
     val replyMessage: IReplyMessage? = null,
 
     @Json(name = "votings")
-    val votings: kotlin.collections.List<IVoting>? = null,
+    val votings: kotlin.collections.List<Voting>? = null,
 
     @Json(name = "messageFromType")
     val messageFromType: MessageServiceType? = null,
